--- a/content/artikel/2201010001.md
+++ b/content/artikel/2201010001.md
@@ -7,9 +7,9 @@ lastmod: 2022-03-20T21:47:51+08:00
 authors:
 - 2r2
 showImg: true
-featuredImg: /tile-wide.png
+featuredImg: https://2r2.netlify.app/tile-wide.png
 images:
-- /tile-wide.png
+- https://2r2.netlify.app/tile-wide.png
 videos:
 categories:
 - "website ini"
